--- a/roles/nsd/files/unsigned_zones/pango.org
+++ b/roles/nsd/files/unsigned_zones/pango.org
@@ -9,10 +9,10 @@ $TTL 3600
 	IN	NS	ns-slave.gnome.org.
 
 	IN	MX	10	smtp.gnome.org.
-    IN	A   8.43.85.13
-    IN  A   8.43.85.14
-    IN  A   8.43.85.29 
+    IN	A   8.43.85.3
+    IN  A   8.43.85.4
+    IN  A   8.43.85.5 
 
-www     IN      CNAME   openshift.gnome.org. 
-wiki    IN      CNAME   openshift.gnome.org.
-old     IN      CNAME   openshift.gnome.org. 
+www     IN      CNAME   router-default.apps.openshift4.gnome.org.
+wiki    IN      CNAME   router-default.apps.openshift4.gnome.org.
+old     IN      CNAME   router-default.apps.openshift4.gnome.org.
